Converting BinarySearchTree tests to AssertJ