@@ -1,9 +1,8 @@
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
+
+import static org.assertj.core.api.Assertions.assertThat;
 import org.junit.Ignore;
 import org.junit.Test;
 
@@ -17,16 +16,17 @@ public class BinarySearchTreeTest {
         binarySearchTree.insert(expected);
 
         BinarySearchTree.Node<Integer> root = binarySearchTree.getRoot();
-        assertNotNull(root);
 
-        int actual = root.getData();
-        assertEquals(expected, actual);
+        assertThat(root).isNotNull();
+        assertThat(root.getData()).isEqualTo(expected);
     }
+
 
     @Ignore("Remove to run test")
     @Test
     public void insertsLess() {
         BinarySearchTree<Character> binarySearchTree = new BinarySearchTree<>();
+
         char expectedRoot = '4';
         char expectedLeft = '2';
 
@@ -34,14 +34,13 @@ public class BinarySearchTreeTest {
         binarySearchTree.insert(expectedLeft);
 
         BinarySearchTree.Node<Character> root = binarySearchTree.getRoot();
-        assertNotNull(root);
         BinarySearchTree.Node<Character> left = root.getLeft();
-        assertNotNull(left);
 
-        char actualRoot = root.getData();
-        char actualLeft = left.getData();
-        assertEquals(expectedLeft, actualLeft);
-        assertEquals(expectedRoot, actualRoot);
+        assertThat(root).isNotNull();
+        assertThat(left).isNotNull();
+
+        assertThat(root.getData()).isEqualTo(expectedRoot);
+        assertThat(left.getData()).isEqualTo(expectedLeft);
     }
 
     @Ignore("Remove to run test")
@@ -55,14 +54,13 @@ public class BinarySearchTreeTest {
         binarySearchTree.insert(expectedLeft);
 
         BinarySearchTree.Node<String> root = binarySearchTree.getRoot();
-        assertNotNull(root);
         BinarySearchTree.Node<String> left = root.getLeft();
-        assertNotNull(left);
 
-        String actualRoot = root.getData();
-        String actualLeft = left.getData();
-        assertEquals(expectedLeft, actualLeft);
-        assertEquals(expectedRoot, actualRoot);
+        assertThat(root).isNotNull();
+        assertThat(left).isNotNull();
+
+        assertThat(root.getData()).isEqualTo(expectedRoot);
+        assertThat(left.getData()).isEqualTo(expectedLeft);
     }
 
     @Ignore("Remove to run test")
@@ -76,106 +74,83 @@ public class BinarySearchTreeTest {
         binarySearchTree.insert(expectedRight);
 
         BinarySearchTree.Node<Integer> root = binarySearchTree.getRoot();
-        assertNotNull(root);
         BinarySearchTree.Node<Integer> right = root.getRight();
-        assertNotNull(right);
 
-        int actualRoot = root.getData();
-        int actualRight = right.getData();
-        assertEquals(expectedRight, actualRight);
-        assertEquals(expectedRoot, actualRoot);
+        assertThat(root).isNotNull();
+        assertThat(right).isNotNull();
+
+        assertThat(root.getData()).isEqualTo(expectedRoot);
+        assertThat(right.getData()).isEqualTo(expectedRight);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void createsComplexTree() {
         BinarySearchTree<Character> binarySearchTree = new BinarySearchTree<>();
-        List<Character> expected = Collections.unmodifiableList(
-                Arrays.asList('4', '2', '6', '1', '3', '5', '7')
-        );
+        List<Character> expected = List.of('4', '2', '6', '1', '3', '5', '7');
 
-        List<Character> treeData = Collections.unmodifiableList(
-                Arrays.asList('4', '2', '6', '1', '3', '5', '7')
-        );
+        List<Character> treeData = List.of('4', '2', '6', '1', '3', '5', '7');
         treeData.forEach(binarySearchTree::insert);
 
-        List<Character> actual = binarySearchTree.getAsLevelOrderList();
-        assertEquals(expected, actual);
+        assertThat(binarySearchTree.getAsLevelOrderList()).isEqualTo(expected);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void sortsSingleElement() {
         BinarySearchTree<String> binarySearchTree = new BinarySearchTree<>();
-        List<String> expected = Collections.unmodifiableList(
-                Collections.singletonList("2")
-        );
+        List<String> expected = Collections.singletonList("2");
 
         binarySearchTree.insert("2");
 
-        List<String> actual = binarySearchTree.getAsSortedList();
-        assertEquals(expected, actual);
+        assertThat(binarySearchTree.getAsSortedList()).isEqualTo(expected);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void sortsCollectionOfTwoIfSecondInsertedIsSmallerThanFirst() {
         BinarySearchTree<Integer> binarySearchTree = new BinarySearchTree<>();
-        List<Integer> expected = Collections.unmodifiableList(
-                Arrays.asList(1, 2)
-        );
+        List<Integer> expected = List.of(1, 2);
 
         binarySearchTree.insert(2);
         binarySearchTree.insert(1);
 
-        List<Integer> actual = binarySearchTree.getAsSortedList();
-        assertEquals(expected, actual);
+        assertThat(binarySearchTree.getAsSortedList()).isEqualTo(expected);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void sortsCollectionOfTwoIfSecondNumberisSameAsFirst() {
         BinarySearchTree<Character> binarySearchTree = new BinarySearchTree<>();
-        List<Character> expected = Collections.unmodifiableList(
-                Arrays.asList('2', '2')
-        );
+        List<Character> expected = List.of('2', '2');
 
         binarySearchTree.insert('2');
         binarySearchTree.insert('2');
 
-        List<Character> actual = binarySearchTree.getAsSortedList();
-        assertEquals(expected, actual);
+        assertThat(binarySearchTree.getAsSortedList()).isEqualTo(expected);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void sortsCollectionOfTwoIfSecondInsertedIsBiggerThanFirst() {
         BinarySearchTree<Character> binarySearchTree = new BinarySearchTree<>();
-        List<Character> expected = Collections.unmodifiableList(
-                Arrays.asList('2', '3')
-        );
+        List<Character> expected = List.of('2', '3');
 
         binarySearchTree.insert('2');
         binarySearchTree.insert('3');
 
-        List<Character> actual = binarySearchTree.getAsSortedList();
-        assertEquals(expected, actual);
+        assertThat(binarySearchTree.getAsSortedList()).isEqualTo(expected);
     }
 
     @Ignore("Remove to run test")
     @Test
     public void iteratesOverComplexTree() {
         BinarySearchTree<String> binarySearchTree = new BinarySearchTree<>();
-        List<String> expected = Collections.unmodifiableList(
-                Arrays.asList("1", "2", "3", "5", "6", "7")
-        );
+        List<String> expected = List.of("1", "2", "3", "5", "6", "7");
 
-        List<String> treeData = Collections.unmodifiableList(
-                Arrays.asList("2", "1", "3", "6", "7", "5")
-        );
+        List<String> treeData = List.of("2", "1", "3", "6", "7", "5");
         treeData.forEach(binarySearchTree::insert);
 
-        List<String> actual = binarySearchTree.getAsSortedList();
-        assertEquals(expected, actual);
+        assertThat(binarySearchTree.getAsSortedList()).isEqualTo(expected);
     }
 }
